# cadastro-e-listagem-de-tarefas

./: .gitignore  .prettierrc  Dockerfile  README.md  app.py  config.py  docker-compose.yml  hello.py  pyproject.toml  requirements.txt  ruff.toml
instance/: tarefas.db
models/: models.py
static/: style.css
templates/: cadastro.html  editar.html  index.html
